# ApiRgRPC

./: .gitignore  BUILD.md  CLAUDE.md  CLI_RETICULUM.md  I2P.md  README.md  RETICULUM_TESTING.md  RETICULUM_TRANSPORT.md  RETICULUM_VPS.md  Reticulum.md  VERSION_MANAGEMENT.md  Zen_of_Reticulum_RU.md
docs/plans/: 2026-06-22-reticulum-transport-stage1.md
rns-engine/: build_engine.sh  device_control.py  requirements.txt  rns_cli.py  rns_engine.py
rns-engine/bridge/: bridge.py  grpc_backend.py  run_bridge.py
rns-engine/proto/: device_control.proto  device_control_pb2.py  device_control_pb2_grpc.py
rns-engine/tests/: test_event_stream.py  test_grpc_backend.py  test_proto_import.py  test_rns_roundtrip.py  test_udp_raw_roundtrip.py
scripts/: version.py
tauri-app/: package.json
tauri-app/src/: index.html  main.js  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: commands.rs  engine.rs  lib.rs  main.rs
