[package]
name = "apirgrpc"
version = "0.1.0"
description = "ApiRgRPC — Reticulum (RNS/LXMF) desktop client"
authors = ["kureinmaxim"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "apirgrpc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
